--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
         - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
         - caffeine-tracker-app
+    external_links:
+      - caffeine-tracker-ui
+    networks:
+      global:
 
   caffeine-tracker-mysql:
     image: mysql
@@ -23,6 +27,8 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: root
     command: mysqld --default-authentication-plugin=mysql_native_password
+    networks:
+      global:
 
   caffeine-tracker-app:
     build: ./caffeine-tracker-app
@@ -34,14 +40,21 @@ services:
     command: php-fpm
     depends_on:
       - caffeine-tracker-mysql
+    networks:
+      global:
 
   caffeine-tracker-ui:
     build: ./caffeine-tracker-ui
     container_name: caffeine-tracker-ui
     ports:
       - 4200:80
-    links:
-      - caffeine-tracker-app
+    external_links:
+      - caffeine-tracker-nginx
+    networks:
+      global:
 
 volumes:
   caffeine-tracker-data:
+
+networks:
+  global:
